# idf-install

./: .gitignore  README.md  install_idf.bat  install_idf.sh  pyproject.toml  run  setup.py  test
.github/: install.yml
.github/workflows/: install.yml  macos_install.yml  push_macos.yml  push_ubuntu.yml  push_win.yml  ubuntu_install.yml  windows_install.yml
src/idf_install/: cli.py  install_idf.py  install_idf.sh  install_idf_repo.py  platform_install.py  settings.py  util.py
tests/: test_cli.py  test_install.py  test_install_and_use.py
